--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</div>
 		<div>
 			<h3>Fight Section</h3>
-			<button id="button1"  value=1><h3>Attack</h3></button>
+			<button id="button1" onclick="attack();" value=1><h3>Attack</h3></button>
 		</div>
 		<div>
 			<h3>Defender</h3>
@@ -82,6 +82,10 @@
 				<h4>Boba Fett</h4>
 				<img class="displayed resize" src="assets/images/boba-fett.jpg">
 			</div>
+		</div>
+		<div id="attack1">
+		</div>
+		<div id="attack2">
 		</div>
 	</section>
 <script src="assets/javascript/game.js"></script>
