Made some changes to logic

--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
 		<div class="container1">
 			<h3>Your Character</h3>
 			<!-- ************ ROW 1 ************ -->
-			<div id="row1_img1" class="container2">
+			<div id="row1_img1" class="container2" data-image="row1_img1">
 				<h4>Han Solo</h4>
 				<img class="displayed resize" src="assets/images/han_solo.jpg">
-				<h5>120</h5>
+				<h5 id="hp">120</h5>
 			</div>
-			<div id="row1_img2" class="container2">	
+			<div id="row1_img2" class="container2" data-image="row1_img2">	
 				<h4>Kylo Ren</h4>
 				<img class="displayed resize" src="assets/images/kylo_ren.jpg">
-				<h5>200</h5>
+				<h5 id="hp">200</h5>
 			</div>	
-			<div id="row1_img3" class="container2">
+			<div id="row1_img3" class="container2" data-image="row1_img3">
 				<h4>R2D2</h4>
 				<img class="displayed resize" src="assets/images/R2D2.jpg">
-				<h5>180</h5>
+				<h5 id="hp">180</h5>
 			</div>
-			<div id="row1_img4" class="container2">
+			<div id="row1_img4" class="container2" data-image="row1_img4">
 				<h4>Boba Fett</h4>
 				<img class="displayed resize" src="assets/images/boba-fett.jpg">
-				<h5>140</h5>
+				<h5 id="hp">140</h5>
 			</div>
 		</div>
 		<div class="container1">
 			<h3>Enemies Avaliable to Attack</h3>
 			<!-- ************ ROW 2 ************ -->
-			<div id="row2_img1" class="container3">
+			<div id="row2_img1" class="container3" data-image="row2_img1">
 				<h4>Han Solo</h4>
 				<img class="displayed resize" src="assets/images/han_solo.jpg">
 			</div>
-			<div id="row2_img2" class="container3">	
+			<div id="row2_img2" class="container3" data-image="row2_img2">	
 				<h4>Kylo Ren</h4>
 				<img class="displayed resize" src="assets/images/kylo_ren.jpg">
 			</div>	
-			<div id="row2_img3" class="container3">
+			<div id="row2_img3" class="container3" data-image="row2_img3">
 				<h4>R2D2</h4>
 				<img class="displayed resize" src="assets/images/R2D2.jpg">
 			</div>
-			<div id="row2_img4" class="container3">
+			<div id="row2_img4" class="container3" data-image="row2_img4">
 				<h4>Boba Fett</h4>
 				<img class="displayed resize" src="assets/images/boba-fett.jpg">
 			</div>
