--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 			<div id="row1_img1" class="container2" data-image="row1_img1">
 				<h4>Han Solo</h4>
 				<img class="displayed resize" src="assets/images/han_solo.jpg">
-				<h5 id="hp">120</h5>
+				<h5 id="attackerHP_han">120</h5>
 			</div>
 			<div id="row1_img2" class="container2" data-image="row1_img2">	
 				<h4>Kylo Ren</h4>
 				<img class="displayed resize" src="assets/images/kylo_ren.jpg">
-				<h5 id="hp">200</h5>
+				<h5 id="attackerHP_kylo">200</h5>
 			</div>	
 			<div id="row1_img3" class="container2" data-image="row1_img3">
 				<h4>R2D2</h4>
 				<img class="displayed resize" src="assets/images/R2D2.jpg">
-				<h5 id="hp">180</h5>
+				<h5 id="attackerHP_r2d2">180</h5>
 			</div>
 			<div id="row1_img4" class="container2" data-image="row1_img4">
 				<h4>Boba Fett</h4>
 				<img class="displayed resize" src="assets/images/boba-fett.jpg">
-				<h5 id="hp">140</h5>
+				<h5 id="attackerHP_boba">140</h5>
 			</div>
 		</div>
 		<div class="container1">
@@ -45,6 +45,7 @@
 			<div id="row2_img1" class="container3" data-image="row2_img1">
 				<h4>Han Solo</h4>
 				<img class="displayed resize" src="assets/images/han_solo.jpg">
+				<h5>120</h5>
 			</div>
 			<div id="row2_img2" class="container3" data-image="row2_img2">	
 				<h4>Kylo Ren</h4>
@@ -69,23 +70,29 @@
 			<div id="row3_img1" class="container3">
 				<h4>Han Solo</h4>
 				<img class="displayed resize" src="assets/images/han_solo.jpg">
+				<h5 id="defenderHP_han">120</h5>
 			</div>
 			<div id="row3_img2" class="container3">	
 				<h4>Kylo Ren</h4>
 				<img class="displayed resize" src="assets/images/kylo_ren.jpg">
+				<h5 id="defenderHP_kylo">120</h5>
 			</div>	
 			<div id="row3_img3" class="container3">
 				<h4>R2D2</h4>
 				<img class="displayed resize" src="assets/images/R2D2.jpg">
+				<h5 id="defenderHP_r2d2">120</h5>
 			</div>
 			<div id="row3_img4" class="container3">
 				<h4>Boba Fett</h4>
 				<img class="displayed resize" src="assets/images/boba-fett.jpg">
+				<h5 id="defenderHP_boba">120</h5>
 			</div>
 		</div>
 		<div id="attack1">
 		</div>
 		<div id="attack2">
+		</div>
+		<div id="win_lose">
 		</div>
 	</section>
 <script src="assets/javascript/game.js"></script>
